Changed some of the padding so that that the title and <p> would align correctly

--- a/LambdaThetaPhiStandards.css
+++ b/LambdaThetaPhiStandards.css
@@ -135,7 +135,7 @@ body
     padding-top: 30px;
 }
 .aboutDesciption{
-    padding-top: 100px;
+    padding-top: 90px;
 }
 .aboutImage{
     padding-bottom: 30px;
